# ajab-fm

./: Cargo.toml  Dioxus.toml  README.md
assets/: style.css
crates/api/: Cargo.toml
crates/api/src/: actions.rs  errors.rs  lib.rs  response_models.rs
crates/app/: Cargo.toml
crates/app/src/: global_state.rs  lib.rs  uri.rs
crates/app/src/components/: files_table.rs  mod.rs  toolbar.rs
crates/app/src/views/: home.rs  mod.rs  text_file_viewer.rs
src/: main.rs
