[package]
name = "ajab-fm"
version = "0.1.0"
authors = ["PiyushXCoder <piyush.raj.kit@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
app = { workspace = true }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace]
members = ["./crates/*", "."]

[workspace.dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = "1.0.219"
chrono = "0.4.26"
infer = "0.19"
app = { path = "crates/app" }
api = { path = "crates/api" }
